<resources>
    <string name="app_name">CalculateBills</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="texttotal">Bill Total</string>
    <string name="text10">10%</string>
    <string name="text15">15%</string>
    <string name="text20">20%</string>
    <string name="textTip">Tip</string>
    <string name="texttotalp">Total</string>
    <string name="textcustom">Custom</string>
    <string name="textreset">0.00</string>
    <string name="porcentajecustom">10%</string>
</resources>
