<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/relativelay">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linear_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texttotal"
            android:id="@+id/textTotal"
            android:textColor="#010101"
            android:textSize="18sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTotal"
            android:layout_weight="1"
            android:inputType="text"
            android:editable="false"
            android:text="@string/textreset" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text10"
            android:id="@+id/text10"
            android:layout_row="0"
            android:layout_column="1"
            android:textColor="#010101"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text15"
            android:id="@+id/text15"
            android:layout_row="0"
            android:layout_column="2"
            android:textSize="20sp"
            android:textColor="#010101"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text20"
            android:id="@+id/text20"
            android:layout_row="0"
            android:layout_column="3"
            android:textSize="20sp"
            android:textColor="#010101"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/textTip"
            android:id="@+id/textTip"
            android:layout_row="1"
            android:layout_column="0"
            android:textColor="#010101"
            android:textSize="20sp" />

        <EditText
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit10"
            android:layout_row="1"
            android:layout_column="1"
            android:inputType="none"
            android:text="@string/textreset"
            android:layout_gravity="center_horizontal"
            android:enabled="false"
            android:editable="false" />

        <EditText
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit15"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/textreset"
            android:enabled="false"
            android:inputType="none" />

        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit20"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/textreset"
            android:enabled="false"
            android:inputType="none" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/texttotalp"
            android:id="@+id/textTotalp"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="20sp"
            android:textColor="#010101" />

        <EditText
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit10Total"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/textreset"
            android:enabled="false"
            android:inputType="none" />

        <EditText
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit15Total"
            android:layout_row="2"
            android:layout_column="2"
            android:inputType="none"
            android:enabled="false"
            android:text="@string/textreset" />

        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit20Total"
            android:layout_row="2"
            android:layout_column="3"
            android:inputType="none"
            android:enabled="false"
            android:text="@string/textreset" />
    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linear_2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textcustom"
            android:id="@+id/textcustom"
            android:textColor="#010101"
            android:textSize="20sp" />

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarcustom"
            android:layout_weight="0.88"
            android:max="100"
            android:progress="10"
            android:indeterminate="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentajecustom"
            android:id="@+id/textporcentaje" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout2">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/textTip"
            android:id="@+id/textTipCustom"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="#010101"
            android:textSize="20sp" />

        <EditText
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTipCuscom"
            android:layout_row="0"
            android:layout_column="1"
            android:inputType="none"
            android:enabled="false"
            android:text="@string/textreset" />

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/texttotalp"
            android:id="@+id/textTotalcustom"
            android:layout_row="0"
            android:layout_column="2"
            android:textSize="20sp"
            android:textColor="#010101" />

        <EditText
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTotalcustom"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/textreset"
            android:enabled="false"
            android:inputType="none" />

    </GridLayout>

</RelativeLayout>
